fix: global.css file to include scrollbar-none property

--- a/astro-frontend/src/styles/global.css
+++ b/astro-frontend/src/styles/global.css
@@ -50,3 +50,11 @@
 
   --animation-slidein: slidein 1s ease-out var(--slidein-delay, 0) forwards;
 }
+
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-none {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
